objects/APTTaskTemplate__c.object
<CustomObject>
    <description>Action Plan Template Task detail</description>
    <fields>
        <fullName>APTTaskTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Dependency</label>
        <referenceTo>APTTaskTemplate__c</referenceTo>
        <relationshipLabel>APT Task Templates</relationshipLabel>
        <relationshipName>R00NR0000000VaVDMA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Template__c</fullName>
        <label>Action Plan Template</label>
        <referenceTo>ActionPlanTemplate__c</referenceTo>
        <relationshipName>R00NR0000000VaQcMAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaysFromStart__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>Days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send email notification when a Task is created.</description>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd65MAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>APT Task</label>
    <nameField>
        <label>APT Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APT Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>